php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #62938 zend_do_bind_catch() used without declaration
Submitted: 2012-08-26 17:50 UTC Modified: 2012-08-27 02:24 UTC
From: cataphract@php.net Assigned: laruence (profile)
Status: Closed Package: Compile Warning
PHP Version: master-Git-2012-08-26 (Git) OS: Linux/clang
Private report: No CVE-ID: None
 [2012-08-26 17:50 UTC] cataphract@php.net
Description:
------------
zend_do_bind_catch() used without declaration. The line that raises the issue was last modified in c64f4e73.

Actual result:
--------------
/opt/php-src/Zend/zend_language_parser.y:318:7: warning: implicit declaration of function 'zend_do_bind_catch' is invalid in C99 [-Wimplicit-function-declaration]
    { zend_do_bind_catch(&(yyvsp[(1) - (6)]), &(yyvsp[(6) - (6)]) TSRMLS_CC); }
      ^
1 warning generated.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-08-26 17:51 UTC] cataphract@php.net
-Assigned To: +Assigned To: laruence
 [2012-08-26 17:51 UTC] cataphract@php.net
Xinchen: I'm assigning to you because you were the last one touching that line. I haven't investigated whether the problem existed before.
 [2012-08-27 02:23 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=cec1786911eea3d515c044a407e22e9b162d7080
Log: Fixed bug #62938 (zend_do_bind_catch() used without declaration)
 [2012-08-27 02:23 UTC] laruence@php.net
@cataphrac, thanks, fixed :)
 [2012-08-27 02:24 UTC] laruence@php.net
-Status: Assigned +Status: Closed
 [2012-08-27 02:24 UTC] laruence@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2013-11-17 09:32 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=cec1786911eea3d515c044a407e22e9b162d7080
Log: Fixed bug #62938 (zend_do_bind_catch() used without declaration)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 14 00:00:02 2026 UTC