Fixed bug #62938 (zend_do_bind_catch() used without declaration)